[tool.poetry]
name = "listparser"
version = "0.19"
description = "Parse OPML subscription lists"
authors = ["Kurt McKee <contactme@kurtmckee.org>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/kurtmckee/listparser/"
documentation = "https://listparser.readthedocs.io/en/latest/"
keywords = ["opml", "foaf", "igoogle", "feed"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Text Processing :: Markup :: XML",
]


[tool.poetry.dependencies]
python = "^3.7"
# The dependencies here must match the minimums tested in `tox.ini`.
requests = {version = "^2.25.1", optional = true}
lxml = {version = "^4.6.2", optional = true}


[tool.poetry.extras]
http = ["requests"]
lxml = ["lxml"]


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
scriv = {extras = ["toml"], version = "^1.0.0"}
tox = "^4.3.5"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.coverage.run]
parallel = true
branch = true
source = [
    "listparser",
    "tests",
]


[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]


[tool.coverage.report]
skip_covered = true
fail_under = 100


[tool.coverage.html]
directory = "htmlcov/"
skip_covered = false


[tool.scriv]
version = "literal: pyproject.toml: tool.poetry.version"
categories = [
    "Python support",
    "Added",
    "Fixed",
    "Removed",
    "Changed",
    "Deprecated",
    "Security",
]
entry_title_template = "{{ version }} - {{ date.strftime('%Y-%m-%d') }}"
format = "rst"
fragment_directory = "changelog.d"
insert_marker = "scriv-insert-here"
main_branches = ["develop", "master"]
new_fragment_template = "file: fragment-template.rst.txt"


[tool.isort]
profile = "black"
