[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "listparser"
version = "0.20"
description = "Parse OPML subscription lists"
authors = [
    { name = "Kurt McKee", email = "contactme@kurtmckee.org" },
]
license = "MIT"
readme = "README.rst"
keywords = ["opml", "foaf", "feed"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing :: Markup :: XML",
]
requires-python = ">=3.9"

[project.urls]
Repository = "https://github.com/kurtmckee/listparser/"
Documentation = "https://listparser.readthedocs.io/en/latest/"

[project.optional-dependencies]
# The dependencies here must match the minimums tested in `tox.ini`.
http = [
    "requests >=2.32.0, <3",
]
lxml = [
    "lxml >=4.6.2, <6",
]


# coverage
# --------

[tool.coverage.run]
relative_files = true
parallel = true
branch = true
source = [
    "listparser",
    "tests",
]

[tool.coverage.paths]
source = [
    "src",
    "*/site-packages",
]

[tool.coverage.report]
skip_covered = true
fail_under = 100

[tool.coverage.html]
directory = "htmlcov/"
skip_covered = false


# isort
# -----

[tool.isort]
profile = "black"


# mypy
# ----

[tool.mypy]
packages = "listparser"
strict = true
sqlite_cache = true
warn_unreachable = true
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]


# pytest
# ------

[tool.pytest.ini_options]
addopts = "--color=yes"
filterwarnings = [
    "error",
]


# scriv
# -----

[tool.scriv]
version = "literal: pyproject.toml: tool.poetry.version"
categories = [
    "Python support",
    "Added",
    "Fixed",
    "Removed",
    "Changed",
    "Deprecated",
    "Security",
    "Development",
]
entry_title_template = "{{ version }} - {{ date.strftime('%Y-%m-%d') }}"
format = "rst"
fragment_directory = "changelog.d"
insert_marker = "scriv-insert-here"
main_branches = ["main", "releases"]
new_fragment_template = "file: fragment-template.rst.txt"
